[package]
name = "rustdoc-cli"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.29", features = ["full", "visit", "extra-traits"] }
proc-macro2 = "1.0.18"
pulldown-cmark = "0.7.1"
syntect = "4.2.0"
